[gd_scene load_steps=13 format=3 uid="uid://bjf7wmor410ps"]

[ext_resource type="Script" uid="uid://c1ojwvbieb55k" path="res://Models/UI/Overlays/BaseOverlay/base_overlay.gd" id="1_fxe44"]
[ext_resource type="PackedScene" uid="uid://co458jxngt4el" path="res://Models/UI/Overlays/Settings/settings.tscn" id="2_3jbmj"]
[ext_resource type="Script" uid="uid://513oavblcmx1" path="res://Models/UI/Overlays/BaseOverlay/base_overlay_input_processing.gd" id="2_rcg7v"]
[ext_resource type="Texture2D" uid="uid://cya3ku2ta4pme" path="res://Assets/Art/0x72_DungeonTilesetII_v1.7/frames/coin_anim_f0.png" id="2_rfrb6"]
[ext_resource type="Script" uid="uid://j834r556e8m6" path="res://Models/UI/Overlays/BaseOverlay/player_display_container.gd" id="2_slhvk"]
[ext_resource type="PackedScene" uid="uid://mmi7n42qt3ph" path="res://Models/UI/Overlays/BaseOverlay/player_data.tscn" id="3_446mo"]
[ext_resource type="Script" uid="uid://lgmdupsehdrc" path="res://Models/UI/Overlays/BaseOverlay/quests_display.gd" id="5_1x7n3"]
[ext_resource type="Texture2D" uid="uid://b4xcktvul2jnv" path="res://Assets/Art/new_animated_texture.tres" id="5_8ecp3"]
[ext_resource type="Script" uid="uid://b1j2o20mmu7vg" path="res://Models/UI/Overlays/BaseOverlay/music_display.gd" id="6_62x73"]
[ext_resource type="Script" uid="uid://vyg66mlvvh32" path="res://Models/UI/Overlays/BaseOverlay/quick_info.gd" id="6_c2u1w"]

[sub_resource type="Gradient" id="Gradient_ffifv"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_61714"]
gradient = SubResource("Gradient_ffifv")
width = 10
height = 10
fill_from = Vector2(1, 0)

[node name="BaseOverlay" type="Control" node_paths=PackedStringArray("player_status", "quest_display", "music_display", "coin_counter", "mag_counter", "quick_info", "button_container", "input_processing", "settings_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fxe44")
player_status = NodePath("PlayerDataOverlay/HBoxContainer/StatusOverlay/MarginContainer/PlayerContainer")
quest_display = NodePath("InfoPanel/Quests")
music_display = NodePath("InfoPanel/Music")
coin_counter = NodePath("PlayerDataOverlay/HBoxContainer/ResourceDisplay/MarginContainer/GridContainer/CoinCount")
mag_counter = NodePath("PlayerDataOverlay/HBoxContainer/ResourceDisplay/MarginContainer/GridContainer/MagCount")
quick_info = NodePath("PlayerDataOverlay/QuickInfo")
button_container = NodePath("Buttons/MenuButtons")
input_processing = NodePath("InputProcessing")
settings_menu = NodePath("Settings")

[node name="InputProcessing" type="Node" parent="."]
script = ExtResource("2_rcg7v")

[node name="PlayerDataOverlay" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 10.0
offset_top = 10.0
theme_override_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerDataOverlay"]
layout_mode = 2

[node name="StatusOverlay" type="PanelContainer" parent="PlayerDataOverlay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PlayerDataOverlay/HBoxContainer/StatusOverlay"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="PlayerContainer" type="VBoxContainer" parent="PlayerDataOverlay/HBoxContainer/StatusOverlay/MarginContainer"]
layout_mode = 2
script = ExtResource("2_slhvk")
data_card_scene = ExtResource("3_446mo")

[node name="PlayerData" parent="PlayerDataOverlay/HBoxContainer/StatusOverlay/MarginContainer/PlayerContainer" instance=ExtResource("3_446mo")]
layout_mode = 2

[node name="ResourceDisplay" type="PanelContainer" parent="PlayerDataOverlay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PlayerDataOverlay/HBoxContainer/ResourceDisplay"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="GridContainer" type="GridContainer" parent="PlayerDataOverlay/HBoxContainer/ResourceDisplay/MarginContainer"]
layout_mode = 2
theme_override_constants/v_separation = 10
columns = 2

[node name="CoinSprite" type="TextureRect" parent="PlayerDataOverlay/HBoxContainer/ResourceDisplay/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_rfrb6")
expand_mode = 3
stretch_mode = 5

[node name="CoinCount" type="Label" parent="PlayerDataOverlay/HBoxContainer/ResourceDisplay/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MagSprite" type="TextureRect" parent="PlayerDataOverlay/HBoxContainer/ResourceDisplay/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_rfrb6")
expand_mode = 3
stretch_mode = 5

[node name="MagCount" type="Label" parent="PlayerDataOverlay/HBoxContainer/ResourceDisplay/MarginContainer/GridContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuickInfo" type="PanelContainer" parent="PlayerDataOverlay" node_paths=PackedStringArray("label", "timer")]
visible = false
layout_mode = 2
script = ExtResource("6_c2u1w")
label = NodePath("Label")
timer = NodePath("Timer")

[node name="Label" type="Label" parent="PlayerDataOverlay/QuickInfo"]
layout_mode = 2

[node name="Timer" type="Timer" parent="PlayerDataOverlay/QuickInfo"]
wait_time = 10.0
one_shot = true

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="MenuButtons" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
alignment = 2

[node name="FreecamButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "FreeCam ( )"
flat = true
alignment = 2

[node name="LogButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "Log ()"
flat = true
alignment = 2

[node name="UIButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "UI ()"
flat = true
alignment = 2

[node name="SettingsButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "Settings ( )"
flat = true
alignment = 2

[node name="QuestsButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "Quests ( )"
flat = true
alignment = 2

[node name="StatusButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "Status (S)"
flat = true
alignment = 2

[node name="InventoryButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "Inventory (I)"
flat = true
alignment = 2

[node name="MapButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
text = "Map (M)"
flat = true
alignment = 2

[node name="SaveButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Save (V)"
flat = true
alignment = 2

[node name="LoadButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Load (L)"
flat = true
alignment = 2

[node name="QuitButton" type="Button" parent="Buttons/MenuButtons"]
layout_mode = 2
theme_type_variation = &"FlatButton"
text = "Quit (Q)"
flat = true
alignment = 2

[node name="MenuButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_type_variation = &"FlatButton"
toggle_mode = true
text = "Menu"
icon = SubResource("GradientTexture2D_61714")
flat = true
alignment = 2
icon_alignment = 2

[node name="InfoPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_top = 10.0
offset_right = -10.0
grow_horizontal = 0
theme_override_constants/separation = 3

[node name="Music" type="PanelContainer" parent="InfoPanel" node_paths=PackedStringArray("text_label")]
layout_mode = 2
script = ExtResource("6_62x73")
text_label = NodePath("MarginContainer/HBoxContainer/Label")

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel/Music"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/Music/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="InfoPanel/Music/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_8ecp3")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="InfoPanel/Music/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Current Track"

[node name="Quests" type="VBoxContainer" parent="InfoPanel" node_paths=PackedStringArray("title", "objective_cointainer")]
layout_mode = 2
theme_override_constants/separation = 3
script = ExtResource("5_1x7n3")
title = NodePath("Header/MarginContainer/QuestLabel")
objective_cointainer = NodePath("Objectives/MarginContainer/VBoxContainer")

[node name="Header" type="PanelContainer" parent="InfoPanel/Quests"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel/Quests/Header"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="QuestLabel" type="Label" parent="InfoPanel/Quests/Header/MarginContainer"]
layout_mode = 2
text = "Current Quest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Objectives" type="PanelContainer" parent="InfoPanel/Quests"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel/Quests/Objectives"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel/Quests/Objectives/MarginContainer"]
layout_mode = 2

[node name="ObjectiveLabel" type="Label" parent="InfoPanel/Quests/Objectives/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "- Objective"

[node name="Settings" parent="." instance=ExtResource("2_3jbmj")]
visible = false
layout_mode = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="PlayerDataOverlay/QuickInfo/Timer" to="PlayerDataOverlay/QuickInfo" method="_on_timer_timeout"]
[connection signal="pressed" from="Buttons/MenuButtons/FreecamButton" to="." method="_on_freecam_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/LogButton" to="." method="_on_log_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/UIButton" to="." method="_on_ui_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/QuestsButton" to="." method="_on_quests_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/StatusButton" to="." method="_on_status_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/InventoryButton" to="." method="_on_inventory_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/MapButton" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Buttons/MenuButton" to="." method="_on_menu_button_pressed"]
